# tinycov

./: CMakeLists.txt  README.md  process_trace.py
lib/: CMakeLists.txt
lib/tinykvm/: machine.cpp  machine.hpp  machine_elf.cpp  memory_maps.cpp  vcpu.cpp  vcpu_run.cpp
lib/tinykvm/amd64/: idt.cpp  idt.hpp  memory_layout.hpp  paging.cpp  tss.cpp
lib/tinykvm/amd64/builtin/: CMakeLists.txt  guest.cpp  guest.h  guest.ld  interrupts.asm  kernel_assembly.h
lib/tinykvm/linux/: fds.cpp  system_calls.cpp
src/: simple.cpp
